# LEADD

./: .gitignore  API.rst  HISTORY.rst  README.rst  db.json  micc.json  pyproject.toml  rdkit_tree.txt
docs/: Makefile  conf.py  index.rst  installation.rst
leadd/: __init__.py
leadd/cpp_core/: CMakeLists.txt  core.cpp  core.rst
leadd/cpp_core/LEADD/: CalculateSAScore.cpp  CheckConnectionQueryResultsGammas.cpp  Connection.cpp  Connection.hpp  ConnectionQueryResults.cpp  ConnectionQueryResults.hpp  ConvertToReconstruction.cpp  DecodeConnection.cpp  EncodeConnection.cpp  Fragment.cpp  Fragmentation.cpp  Fragmentation.hpp  Graph.cpp  Graph.hpp  LEADD.cpp  LEADD.hpp  MakeFeatureLibrary.cpp  MakeFragmentSimilarityMatrix.cpp  Makefile  PrecalculateConnectionQueryResults.cpp  Pseudofragment.cpp  Pseudofragment.hpp  PseudofragmentDB.cpp  PseudofragmentDB.hpp  Reconstruction.cpp  Reconstruction.hpp  ReconstructionSettings.cpp  ReconstructionSettings.hpp  SAScore.cpp  SAScore.hpp  StandaloneLEADD.cpp  example.py  settings.txt
presentations/: ticket1485-discussion-solution-bert.pptx
tests/: __init__.py  test_cpp_core.py  test_leadd.py
